# sounanda

./: README.md  dune-project  sounanda.opam
editor/emacs/: sounanda-lsp-client.el  sounanda-mode.el
examples/: test.sounanda
lib/lsp/: dune  message.atd  message_json.ml  sample.ml
lib/parser/: dune  lexer.mll  node.ml  parser.ml  span.ml  syntax.base.messages  syntax.messages  syntax.mly  syntax_error.ml
lib/sema/: analyer.ml  dune
