(library
 (name sounanda_lsp)
 (libraries base stdio sexplib yojson atdgen)
 (preprocess
  (pps ppx_let)))

(rule
 (targets message_t.ml
          message_t.mli)
 (deps    message.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets message_j.ml
          message_j.mli)
 (deps    message.atd)
 (action  (run atdgen -j -j-std %{deps})))
